Add: reset css and change some style

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,12 @@
   --white: #ffffff;
 
   color: var(--black);
+
+  font-size: 10px;
+
+  --z-index--header: 5;
+  --z-index--modal: 10;
+  --z-index--overlay: 100;
 }
 
 html,
